Resource Manager: restyle the tags widget

Previous to this commit, the tags widget had excessive padding and used
a customized paintEvent to draw it.

This commit:

- fixes the wrappable QHBoxWidget that we use to match Qt's
behaviour
- uses the Qt style machinery to paint the tag widget according
to the chosen style
- changes the close icon to be an actual QPushButton (thus
making it accessible)
- adds a tooltip to the Add tag and Remove tag buttons
- and fixes the sizing of the Add tag button.

BUG: 445625
(cherry picked from commit 0f758b9d040e4eface2cafdd632e2fc45c323b25)